# lua

./: .clang-format  .clang-tidy  .gitignore  BUGS_FIXED.md  CMakeLists.txt  DEVELOPMENT_STANDARDS.md  ERROR_REPORTING_TEST_GUIDE.md  LICENSE  NAMING_CHECK_README.md  README.md  README_CN.md  REPL_development_plan.md  REPL_使用说明.md  TESTING_GUIDE.md  TEST_README.md  VM_ARCHITECTURE_REFACTOR.md  VM_REFACTOR_ISSUES.md  arithmetic_test.lua  basic_test.lua  build_complete.bat  build_minimal.bat  build_minimal.sh  closure_test.lua  comprehensive_test.lua  comprehensive_vm_test.lua  current_bugs.md  current_develop_plan.md  debug_call_expansion.lua  debug_call_simple.lua  debug_concat_parsing.lua  debug_condition.lua  debug_constant_folding.lua  debug_corruption.lua  debug_exact_issue.lua  debug_exact_pattern.lua  debug_for_increment.lua  debug_function_call.lua  debug_function_test.lua  debug_local_scope.lua  debug_minimal.lua  (+66 more)
docs/: LUA_5_1_COMPATIBILITY_PLAN.md  README.md  VM_REFACTOR_ISSUES.md  base_lib_architecture_comparison.md  closure_boundary_implementation.md  compilation_recovery_plan_2025_07_06.md  comprehensive_standard_library_refactoring_plan.md  comprehensive_test_detection_guide.md  core_framework_implementation_plan.md  docs_overview.md  documentation_index.md  final_compilation_fix_report.md  framework_replacement_fixes.md  framework_replacement_report.md  incomplete_features_report.md  instruction_compatibility_report.md  library_framework_compilation_report.md  memory_leak_detection_guide.md  missing_features_analysis.md  modern_cpp_lua_design_evaluation.md  modern_library_framework_guide.md  namespace_structure.md  parser_error_reporting_guide.md  phase1_completion_report.md  phase2_updated_plan.md  plugin_removal_report.md  project_comprehensive_analysis_2025_07_06.md  project_progress_report.md  scope_manager_crash_fix.md  standard_library_framework_design.md  state_to_luastate_migration_plan.md  technical_breakthrough_2025_06_29.md  test_framework_memory_integration_guide.md  test_results_analysis.md  upvalue_implementation.md  vm_architecture_assessment.md  vm_instruction_compliance_report.md  vm_instruction_detailed_comparison.md  vm_instruction_fix_guide.md  vm_state_refactoring_plan.md  (+8 more)
docs/core/: project_progress_report.md
docs/development/: documentation_migration_complete.md  gc_integration_completion_report.md  lua51_gc_compatibility_plan.md  lua51_gc_phase1_completion_report.md
docs/gc/: allocator_optimization.md  gc_integration_guide.md  gc_overview.md  string_pool_implementation.md
docs/lib/: base_hpp_removal_complete.md  base_lib_compilation_complete.md  base_lib_complete.md  base_lib_deep_scan_complete.md  base_lib_rename_complete.md  cleanup_completion_report.md  library_architecture.md  modular_structure_guide.md  simple_prefix_removal_report.md  simplified_standard_library_complete.md  standard_library_completion_report.md
docs/modules/: README.md  _template.md  compiler_module_report.md  function_module_report.md  gc_module_report.md  lexer_module_report.md  lib_module_report.md  parser_module_report.md  test_framework_module_report.md  vm_module_report.md
docs/test_framework/: development_standards_compliance_report.md  naming_check_tool.md  standard_library_test_final_summary.md  standard_library_test_refactoring_report.md  standard_library_test_structure_compliance.md  test_framework_guide.md  testing_framework_standards.md
docs/tests/: closure_boundary_test_implementation.md  closure_testing.md  error_handling_tests.md
docs/tools/: development_tools_guide.md
docs/wiki/: wiki_lib.md  wiki_value.md
scripts/: update_test_standards.py
src/: main.cpp  main_simple.cpp  repl.cpp  test_runner.cpp  types.hpp
src/api/: lua51_gc_api.cpp  lua51_gc_api.hpp
src/common/: defines.hpp  lua_exception.cpp  memory_leak_detector.cpp  memory_leak_detector.hpp  opcodes.cpp  opcodes.hpp  test_framework.hpp  timeout_memory_detector.cpp  timeout_memory_detector.hpp  types.hpp
src/compiler/: compiler.cpp  compiler.hpp  compiler_utils.cpp  compiler_utils.hpp  expression_compiler.cpp  expression_compiler.hpp  register_manager.cpp  register_manager.hpp  statement_compiler.cpp  statement_compiler.hpp  symbol_table.cpp  symbol_table.hpp  (+2 more)
src/lib/plugin/: CMakeLists.txt  README.md  plugin.cpp  plugin.hpp  plugin_context.cpp  plugin_context.hpp  plugin_interface.cpp  plugin_interface.hpp  plugin_loader.cpp  plugin_loader.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_registry.cpp  plugin_registry.hpp  plugin_sandbox.cpp  plugin_sandbox.hpp
src/lib/plugin/examples/: CMakeLists.txt  demo.cpp  example_plugin.cpp  example_plugin.hpp
src/test_framework/: CMakeLists.txt  LuaTestFrameworkConfig.cmake.in  MIGRATION_GUIDE.md  README.md  USAGE_GUIDE.md  build_tests.bat  example_main.cpp  test_framework.hpp  test_main_template.cpp.in
src/test_framework/config/: config_loader.hpp  test_format_config.txt
src/test_framework/core/: test_macros.hpp  test_memory.cpp  test_memory.hpp  test_runner.hpp  test_utils.hpp
src/test_framework/examples/: example_test.hpp  lexer_test.cpp
src/test_framework/formatting/: format_colors.cpp  format_colors.hpp  format_config.cpp  format_config.hpp  format_formatter.cpp  format_formatter.hpp  format_strategies.cpp  format_strategies.hpp
src/test_framework/tools/: check_naming.bat  check_naming.py  check_naming_simple.py
test_modules/: circular_a.lua  circular_b.lua  object_module.lua  utility_module.lua
test_scripts/: test_comprehensive.lua  test_minimal.lua  test_simple.lua  test_string_lib.lua
tests/: benchmark_tests.cpp  compatibility_tests.cpp  enhanced_error_reporting_validation.cpp  error_output_analyzer.cpp  function_tests.cpp  integration_tests.cpp  lexer_tests.cpp  lua51_reference_outputs.txt  main_test.cpp  parser_tests.cpp  simple_error_format_test.cpp  state_tests.cpp  table_tests.cpp  value_tests.cpp  vm_tests.cpp
tools/: README.md  check_standards.bat  check_standards.sh  check_standards_ascii.bat  check_standards_en_new.bat  cmake_standards.cmake  compile_check.bat  compile_check.sh
(+436 files in other folders)
